--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   I am a Mathematic Enthusiastic and AI explorer.
   I explore artificial intelligence concepts through image,video and animation.
 url: "https://priyanka36.github.io"
-twitter_username: 
+twitter_username: Paudelpinku
 github_username: 
 stackoverflow_username: 
 linkiden_username: 
