--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ minimal_mistakes_skin: default
 search: true
 
 twitter:
-  username: ""
+  username: "Paudelpinku"
 
 # Build settings
 markdown: kramdown
