--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ author:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/MadanBaduwal1"
+      url: "https://twitter.com/Paudelpinku"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/MadanBaduwal"
@@ -95,7 +95,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/MadanBaduwal1"
+      url: "https://twitter.com/Paudelpinku"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/MadanBaduwal"
